<package>
  <name>cvmatio</name>
  <version>0.0.1</version>
  <description>A Matlab version 5 .Mat file parser for C++ with OpenCV bindings</description>
  <author email="hbristow@willowgarage.com">Hilton Bristow</author>
  <maintainer email="hbristow@willowgarage.com">Hilton Bristow</maintainer>
  <license>BSD</license>
  <url>http://ecto.willowgarage.com</url>

  <build_depend>opencv2</build_depend>

  <run_depend>opencv2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
